<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:textColor="@color/colorTextWhite"
                    android:textColorHint="@color/colorText" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/colorTextWhite"
                    android:textColorHint="@color/colorText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/password_should_be"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/at_least_8_character"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/at_least_one_uppercase"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/at_least_one_number"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/unchecked" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/at_least_one_symbol"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="15sp" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorButtonBackground"
                    android:padding="25sp"
                    android:stateListAnimator="@null"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>